# studyopengl

./: CMakeLists.txt  main.cpp
